added authentication middelware as useridmiddlewar

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL = mongodb://127.0.0.1:27017/offerme
 JWT_SECRET = lakhanmadethiscode
+API_KEY = f60e4dda8dmsh8b56a6673d0c60ep13ef2bjsn35c7ff1d2ee5
