--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-DATABASE_URL = mongodb://127.0.0.1:27017/offerme
+DATABASE_URL =
+#use you db url
 JWT_SECRET = lakhanmadethiscode
-API_KEY = b66b71aa7emsh249a295c4fa7177p1f1165jsn9406a72152c7
+API_KEY = 
+#https://rapidapi.com/letscrape-6bRBa3QguO5/api/real-time-product-search
+#get your api from the above link 
