--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ DATABASE_URL = 'mongodb://127.0.0.1:27017/offerme'
 #use you db url
 JWT_SECRET = lakhanmadethiscode
 API_KEY = 
+PORT = 5000
 #https://rapidapi.com/letscrape-6bRBa3QguO5/api/real-time-product-search
 #get your api from the above link 
