--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL = 'mongodb://127.0.0.1:27017/offerme'
+DATABASE_URL = 'mongodb+srv://lakhansharma889027:bkxiuFfBMbWyqI3N@cluster0.pimpfie.mongodb.net/?retryWrites=true&w=majority'
+#bkxiuFfBMbWyqI3N
 #use you db url
 JWT_SECRET = lakhanmadethiscode
 API_KEY = 
