--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "excel4node": "^1.8.2",
     "express": "^4.18.2",
@@ -28,6 +29,7 @@
     "pdf-parse": "^1.1.1",
     "pdf-to-text": "^0.0.7",
     "redis": "^4.6.8",
+    "request-ip": "^3.3.0",
     "truecallerjs": "^2.2.0"
   }
 }
