--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DATABASE_URL = 'mongodb+srv://lakhansharma889027:bkxiuFfBMbWyqI3N@cluster0.pimpfie.mongodb.net/?retryWrites=true&w=majority'
+DATABASE_2_URL='mongodb://127.0.0.1:27017/offerme'
+#mongodb://127.0.0.1:27017/offerme
 #bkxiuFfBMbWyqI3N
 #use you db url
 JWT_SECRET = lakhanmadethiscode
